@@ -1,1 +1,8 @@
 # spring-boot-oracle
+
+Run the Spring Boot application locally
+
+```shell
+mvnw clean package -Dnet.bytebuddy.experimental=true
+mvnw clean spring-boot:run
+```
